* Set java version to 11 * circle ci config * Dockerfile * Refactoring